intellij-root/src/parser/TigerParser.java
// $ANTLR 3.5.2 src/Tiger.g 2018-11-30 09:11:48

package parser;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class TigerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARR", "ARRTYPE", "CALL", "CALLTYPE", 
		"COMMENT", "DEC", "FIELD", "ID", "INT", "ITEM", "REC", "RECTYPE", "SEQ", 
		"STR", "WS", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", 
		"':'", "':='", "';'", "'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'['", 
		"']'", "'array'", "'break'", "'do'", "'else'", "'end'", "'for'", "'function'", 
		"'if'", "'in'", "'let'", "'nil'", "'of'", "'then'", "'to'", "'type'", 
		"'var'", "'while'", "'{'", "'|'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int ARR=4;
	public static final int ARRTYPE=5;
	public static final int CALL=6;
	public static final int CALLTYPE=7;
	public static final int COMMENT=8;
	public static final int DEC=9;
	public static final int FIELD=10;
	public static final int ID=11;
	public static final int INT=12;
	public static final int ITEM=13;
	public static final int REC=14;
	public static final int RECTYPE=15;
	public static final int SEQ=16;
	public static final int STR=17;
	public static final int WS=18;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public TigerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public TigerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return TigerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "src/Tiger.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// src/Tiger.g:23:1: program : exp EOF !;
	public final TigerParser.program_return program() throws RecognitionException {
		TigerParser.program_return retval = new TigerParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope exp1 =null;

		Object EOF2_tree=null;

		try {
			// src/Tiger.g:24:5: ( exp EOF !)
			// src/Tiger.g:24:5: exp EOF !
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_exp_in_program137);
			exp1=exp();
			state._fsp--;

			adaptor.addChild(root_0, exp1.getTree());

			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program139); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class exp_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "exp"
	// src/Tiger.g:27:1: exp : orExp ( ':=' ^ exp )? ;
	public final TigerParser.exp_return exp() throws RecognitionException {
		TigerParser.exp_return retval = new TigerParser.exp_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal4=null;
		ParserRuleReturnScope orExp3 =null;
		ParserRuleReturnScope exp5 =null;

		Object string_literal4_tree=null;

		try {
			// src/Tiger.g:28:5: ( orExp ( ':=' ^ exp )? )
			// src/Tiger.g:28:5: orExp ( ':=' ^ exp )?
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_orExp_in_exp151);
			orExp3=orExp();
			state._fsp--;

			adaptor.addChild(root_0, orExp3.getTree());

			// src/Tiger.g:29:5: ( ':=' ^ exp )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==29) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// src/Tiger.g:29:9: ':=' ^ exp
					{
					string_literal4=(Token)match(input,29,FOLLOW_29_in_exp161); 
					string_literal4_tree = (Object)adaptor.create(string_literal4);
					root_0 = (Object)adaptor.becomeRoot(string_literal4_tree, root_0);

					pushFollow(FOLLOW_exp_in_exp172);
					exp5=exp();
					state._fsp--;

					adaptor.addChild(root_0, exp5.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "exp"


	public static class orExp_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "orExp"
	// src/Tiger.g:34:1: orExp : andExp ( '|' ^ andExp ( '|' ! andExp )* )? ;
	public final TigerParser.orExp_return orExp() throws RecognitionException {
		TigerParser.orExp_return retval = new TigerParser.orExp_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal7=null;
		Token char_literal9=null;
		ParserRuleReturnScope andExp6 =null;
		ParserRuleReturnScope andExp8 =null;
		ParserRuleReturnScope andExp10 =null;

		Object char_literal7_tree=null;
		Object char_literal9_tree=null;

		try {
			// src/Tiger.g:35:5: ( andExp ( '|' ^ andExp ( '|' ! andExp )* )? )
			// src/Tiger.g:35:5: andExp ( '|' ^ andExp ( '|' ! andExp )* )?
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_andExp_in_orExp190);
			andExp6=andExp();
			state._fsp--;

			adaptor.addChild(root_0, andExp6.getTree());

			// src/Tiger.g:36:5: ( '|' ^ andExp ( '|' ! andExp )* )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==57) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// src/Tiger.g:36:9: '|' ^ andExp ( '|' ! andExp )*
					{
					char_literal7=(Token)match(input,57,FOLLOW_57_in_orExp200); 
					char_literal7_tree = (Object)adaptor.create(char_literal7);
					root_0 = (Object)adaptor.becomeRoot(char_literal7_tree, root_0);

					pushFollow(FOLLOW_andExp_in_orExp211);
					andExp8=andExp();
					state._fsp--;

					adaptor.addChild(root_0, andExp8.getTree());

					// src/Tiger.g:38:9: ( '|' ! andExp )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==57) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// src/Tiger.g:38:13: '|' ! andExp
							{
							char_literal9=(Token)match(input,57,FOLLOW_57_in_orExp225); 
							pushFollow(FOLLOW_andExp_in_orExp240);
							andExp10=andExp();
							state._fsp--;

							adaptor.addChild(root_0, andExp10.getTree());

							}
							break;

						default :
							break loop2;
						}
					}

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "orExp"


	public static class andExp_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "andExp"
	// src/Tiger.g:44:1: andExp : compExp ( '&' ^ compExp ( '&' ! compExp )* )? ;
	public final TigerParser.andExp_return andExp() throws RecognitionException {
		TigerParser.andExp_return retval = new TigerParser.andExp_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal12=null;
		Token char_literal14=null;
		ParserRuleReturnScope compExp11 =null;
		ParserRuleReturnScope compExp13 =null;
		ParserRuleReturnScope compExp15 =null;

		Object char_literal12_tree=null;
		Object char_literal14_tree=null;

		try {
			// src/Tiger.g:45:5: ( compExp ( '&' ^ compExp ( '&' ! compExp )* )? )
			// src/Tiger.g:45:5: compExp ( '&' ^ compExp ( '&' ! compExp )* )?
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_compExp_in_andExp269);
			compExp11=compExp();
			state._fsp--;

			adaptor.addChild(root_0, compExp11.getTree());

			// src/Tiger.g:46:5: ( '&' ^ compExp ( '&' ! compExp )* )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==19) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// src/Tiger.g:46:9: '&' ^ compExp ( '&' ! compExp )*
					{
					char_literal12=(Token)match(input,19,FOLLOW_19_in_andExp279); 
					char_literal12_tree = (Object)adaptor.create(char_literal12);
					root_0 = (Object)adaptor.becomeRoot(char_literal12_tree, root_0);

					pushFollow(FOLLOW_compExp_in_andExp290);
					compExp13=compExp();
					state._fsp--;

					adaptor.addChild(root_0, compExp13.getTree());

					// src/Tiger.g:48:9: ( '&' ! compExp )*
					loop4:
					while (true) {
						int alt4=2;
						int LA4_0 = input.LA(1);
						if ( (LA4_0==19) ) {
							alt4=1;
						}

						switch (alt4) {
						case 1 :
							// src/Tiger.g:48:13: '&' ! compExp
							{
							char_literal14=(Token)match(input,19,FOLLOW_19_in_andExp304); 
							pushFollow(FOLLOW_compExp_in_andExp319);
							compExp15=compExp();
							state._fsp--;

							adaptor.addChild(root_0, compExp15.getTree());

							}
							break;

						default :
							break loop4;
						}
					}

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "andExp"


	public static class compExp_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "compExp"
	// src/Tiger.g:54:1: compExp : addExp ( ( '=' | '<>' | '>' | '<' | '>=' | '<=' ) ^ addExp )? ;
	public final TigerParser.compExp_return compExp() throws RecognitionException {
		TigerParser.compExp_return retval = new TigerParser.compExp_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set17=null;
		ParserRuleReturnScope addExp16 =null;
		ParserRuleReturnScope addExp18 =null;

		Object set17_tree=null;

		try {
			// src/Tiger.g:55:5: ( addExp ( ( '=' | '<>' | '>' | '<' | '>=' | '<=' ) ^ addExp )? )
			// src/Tiger.g:55:5: addExp ( ( '=' | '<>' | '>' | '<' | '>=' | '<=' ) ^ addExp )?
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_addExp_in_compExp348);
			addExp16=addExp();
			state._fsp--;

			adaptor.addChild(root_0, addExp16.getTree());

			// src/Tiger.g:56:5: ( ( '=' | '<>' | '>' | '<' | '>=' | '<=' ) ^ addExp )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( ((LA6_0 >= 31 && LA6_0 <= 36)) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// src/Tiger.g:56:9: ( '=' | '<>' | '>' | '<' | '>=' | '<=' ) ^ addExp
					{
					set17=input.LT(1);
					set17=input.LT(1);
					if ( (input.LA(1) >= 31 && input.LA(1) <= 36) ) {
						input.consume();
						root_0 = (Object)adaptor.becomeRoot((Object)adaptor.create(set17), root_0);
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_addExp_in_compExp453);
					addExp18=addExp();
					state._fsp--;

					adaptor.addChild(root_0, addExp18.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "compExp"


	public static class addExp_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "addExp"
	// src/Tiger.g:67:1: addExp : mulExp ( '+' ^ mulExp ( '+' ! mulExp )* )? ( '-' ^ mulExp ( '+' ^ mulExp ( '+' ! mulExp )* )? )* ;
	public final TigerParser.addExp_return addExp() throws RecognitionException {
		TigerParser.addExp_return retval = new TigerParser.addExp_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal20=null;
		Token char_literal22=null;
		Token char_literal24=null;
		Token char_literal26=null;
		Token char_literal28=null;
		ParserRuleReturnScope mulExp19 =null;
		ParserRuleReturnScope mulExp21 =null;
		ParserRuleReturnScope mulExp23 =null;
		ParserRuleReturnScope mulExp25 =null;
		ParserRuleReturnScope mulExp27 =null;
		ParserRuleReturnScope mulExp29 =null;

		Object char_literal20_tree=null;
		Object char_literal22_tree=null;
		Object char_literal24_tree=null;
		Object char_literal26_tree=null;
		Object char_literal28_tree=null;

		try {
			// src/Tiger.g:68:5: ( mulExp ( '+' ^ mulExp ( '+' ! mulExp )* )? ( '-' ^ mulExp ( '+' ^ mulExp ( '+' ! mulExp )* )? )* )
			// src/Tiger.g:68:5: mulExp ( '+' ^ mulExp ( '+' ! mulExp )* )? ( '-' ^ mulExp ( '+' ^ mulExp ( '+' ! mulExp )* )? )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_mulExp_in_addExp471);
			mulExp19=mulExp();
			state._fsp--;

			adaptor.addChild(root_0, mulExp19.getTree());

			// src/Tiger.g:69:5: ( '+' ^ mulExp ( '+' ! mulExp )* )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==23) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// src/Tiger.g:69:9: '+' ^ mulExp ( '+' ! mulExp )*
					{
					char_literal20=(Token)match(input,23,FOLLOW_23_in_addExp481); 
					char_literal20_tree = (Object)adaptor.create(char_literal20);
					root_0 = (Object)adaptor.becomeRoot(char_literal20_tree, root_0);

					pushFollow(FOLLOW_mulExp_in_addExp492);
					mulExp21=mulExp();
					state._fsp--;

					adaptor.addChild(root_0, mulExp21.getTree());

					// src/Tiger.g:71:9: ( '+' ! mulExp )*
					loop7:
					while (true) {
						int alt7=2;
						int LA7_0 = input.LA(1);
						if ( (LA7_0==23) ) {
							alt7=1;
						}

						switch (alt7) {
						case 1 :
							// src/Tiger.g:71:13: '+' ! mulExp
							{
							char_literal22=(Token)match(input,23,FOLLOW_23_in_addExp506); 
							pushFollow(FOLLOW_mulExp_in_addExp521);
							mulExp23=mulExp();
							state._fsp--;

							adaptor.addChild(root_0, mulExp23.getTree());

							}
							break;

						default :
							break loop7;
						}
					}

					}
					break;

			}

			// src/Tiger.g:75:5: ( '-' ^ mulExp ( '+' ^ mulExp ( '+' ! mulExp )* )? )*
			loop11:
			while (true) {
				int alt11=2;
				int LA11_0 = input.LA(1);
				if ( (LA11_0==25) ) {
					alt11=1;
				}

				switch (alt11) {
				case 1 :
					// src/Tiger.g:75:9: '-' ^ mulExp ( '+' ^ mulExp ( '+' ! mulExp )* )?
					{
					char_literal24=(Token)match(input,25,FOLLOW_25_in_addExp549); 
					char_literal24_tree = (Object)adaptor.create(char_literal24);
					root_0 = (Object)adaptor.becomeRoot(char_literal24_tree, root_0);

					pushFollow(FOLLOW_mulExp_in_addExp560);
					mulExp25=mulExp();
					state._fsp--;

					adaptor.addChild(root_0, mulExp25.getTree());

					// src/Tiger.g:77:9: ( '+' ^ mulExp ( '+' ! mulExp )* )?
					int alt10=2;
					int LA10_0 = input.LA(1);
					if ( (LA10_0==23) ) {
						alt10=1;
					}
					switch (alt10) {
						case 1 :
							// src/Tiger.g:77:13: '+' ^ mulExp ( '+' ! mulExp )*
							{
							char_literal26=(Token)match(input,23,FOLLOW_23_in_addExp574); 
							char_literal26_tree = (Object)adaptor.create(char_literal26);
							root_0 = (Object)adaptor.becomeRoot(char_literal26_tree, root_0);

							pushFollow(FOLLOW_mulExp_in_addExp589);
							mulExp27=mulExp();
							state._fsp--;

							adaptor.addChild(root_0, mulExp27.getTree());

							// src/Tiger.g:79:13: ( '+' ! mulExp )*
							loop9:
							while (true) {
								int alt9=2;
								int LA9_0 = input.LA(1);
								if ( (LA9_0==23) ) {
									alt9=1;
								}

								switch (alt9) {
								case 1 :
									// src/Tiger.g:79:17: '+' ! mulExp
									{
									char_literal28=(Token)match(input,23,FOLLOW_23_in_addExp607); 
									pushFollow(FOLLOW_mulExp_in_addExp626);
									mulExp29=mulExp();
									state._fsp--;

									adaptor.addChild(root_0, mulExp29.getTree());

									}
									break;

								default :
									break loop9;
								}
							}

							}
							break;

					}

					}
					break;

				default :
					break loop11;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "addExp"


	public static class mulExp_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "mulExp"
	// src/Tiger.g:86:1: mulExp : unaryExp ( '*' ^ unaryExp ( '*' ! unaryExp )* )? ( '/' ^ unaryExp ( '*' ^ unaryExp ( '*' ! unaryExp )* )? )* ;
	public final TigerParser.mulExp_return mulExp() throws RecognitionException {
		TigerParser.mulExp_return retval = new TigerParser.mulExp_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal31=null;
		Token char_literal33=null;
		Token char_literal35=null;
		Token char_literal37=null;
		Token char_literal39=null;
		ParserRuleReturnScope unaryExp30 =null;
		ParserRuleReturnScope unaryExp32 =null;
		ParserRuleReturnScope unaryExp34 =null;
		ParserRuleReturnScope unaryExp36 =null;
		ParserRuleReturnScope unaryExp38 =null;
		ParserRuleReturnScope unaryExp40 =null;

		Object char_literal31_tree=null;
		Object char_literal33_tree=null;
		Object char_literal35_tree=null;
		Object char_literal37_tree=null;
		Object char_literal39_tree=null;

		try {
			// src/Tiger.g:87:5: ( unaryExp ( '*' ^ unaryExp ( '*' ! unaryExp )* )? ( '/' ^ unaryExp ( '*' ^ unaryExp ( '*' ! unaryExp )* )? )* )
			// src/Tiger.g:87:5: unaryExp ( '*' ^ unaryExp ( '*' ! unaryExp )* )? ( '/' ^ unaryExp ( '*' ^ unaryExp ( '*' ! unaryExp )* )? )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_unaryExp_in_mulExp670);
			unaryExp30=unaryExp();
			state._fsp--;

			adaptor.addChild(root_0, unaryExp30.getTree());

			// src/Tiger.g:88:5: ( '*' ^ unaryExp ( '*' ! unaryExp )* )?
			int alt13=2;
			int LA13_0 = input.LA(1);
			if ( (LA13_0==22) ) {
				alt13=1;
			}
			switch (alt13) {
				case 1 :
					// src/Tiger.g:88:9: '*' ^ unaryExp ( '*' ! unaryExp )*
					{
					char_literal31=(Token)match(input,22,FOLLOW_22_in_mulExp680); 
					char_literal31_tree = (Object)adaptor.create(char_literal31);
					root_0 = (Object)adaptor.becomeRoot(char_literal31_tree, root_0);

					pushFollow(FOLLOW_unaryExp_in_mulExp691);
					unaryExp32=unaryExp();
					state._fsp--;

					adaptor.addChild(root_0, unaryExp32.getTree());

					// src/Tiger.g:90:9: ( '*' ! unaryExp )*
					loop12:
					while (true) {
						int alt12=2;
						int LA12_0 = input.LA(1);
						if ( (LA12_0==22) ) {
							alt12=1;
						}

						switch (alt12) {
						case 1 :
							// src/Tiger.g:90:13: '*' ! unaryExp
							{
							char_literal33=(Token)match(input,22,FOLLOW_22_in_mulExp705); 
							pushFollow(FOLLOW_unaryExp_in_mulExp720);
							unaryExp34=unaryExp();
							state._fsp--;

							adaptor.addChild(root_0, unaryExp34.getTree());

							}
							break;

						default :
							break loop12;
						}
					}

					}
					break;

			}

			// src/Tiger.g:94:5: ( '/' ^ unaryExp ( '*' ^ unaryExp ( '*' ! unaryExp )* )? )*
			loop16:
			while (true) {
				int alt16=2;
				int LA16_0 = input.LA(1);
				if ( (LA16_0==27) ) {
					alt16=1;
				}

				switch (alt16) {
				case 1 :
					// src/Tiger.g:94:9: '/' ^ unaryExp ( '*' ^ unaryExp ( '*' ! unaryExp )* )?
					{
					char_literal35=(Token)match(input,27,FOLLOW_27_in_mulExp748); 
					char_literal35_tree = (Object)adaptor.create(char_literal35);
					root_0 = (Object)adaptor.becomeRoot(char_literal35_tree, root_0);

					pushFollow(FOLLOW_unaryExp_in_mulExp759);
					unaryExp36=unaryExp();
					state._fsp--;

					adaptor.addChild(root_0, unaryExp36.getTree());

					// src/Tiger.g:96:9: ( '*' ^ unaryExp ( '*' ! unaryExp )* )?
					int alt15=2;
					int LA15_0 = input.LA(1);
					if ( (LA15_0==22) ) {
						alt15=1;
					}
					switch (alt15) {
						case 1 :
							// src/Tiger.g:96:13: '*' ^ unaryExp ( '*' ! unaryExp )*
							{
							char_literal37=(Token)match(input,22,FOLLOW_22_in_mulExp773); 
							char_literal37_tree = (Object)adaptor.create(char_literal37);
							root_0 = (Object)adaptor.becomeRoot(char_literal37_tree, root_0);

							pushFollow(FOLLOW_unaryExp_in_mulExp788);
							unaryExp38=unaryExp();
							state._fsp--;

							adaptor.addChild(root_0, unaryExp38.getTree());

							// src/Tiger.g:98:13: ( '*' ! unaryExp )*
							loop14:
							while (true) {
								int alt14=2;
								int LA14_0 = input.LA(1);
								if ( (LA14_0==22) ) {
									alt14=1;
								}

								switch (alt14) {
								case 1 :
									// src/Tiger.g:98:17: '*' ! unaryExp
									{
									char_literal39=(Token)match(input,22,FOLLOW_22_in_mulExp806); 
									pushFollow(FOLLOW_unaryExp_in_mulExp825);
									unaryExp40=unaryExp();
									state._fsp--;

									adaptor.addChild(root_0, unaryExp40.getTree());

									}
									break;

								default :
									break loop14;
								}
							}

							}
							break;

					}

					}
					break;

				default :
					break loop16;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "mulExp"


	public static class unaryExp_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};

